<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnHome" />

    <Button
        android:id="@+id/btnLearn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLearn" />

    <Button
        android:id="@+id/btnTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTest" />

    <CheckBox
        android:id="@+id/chkStartTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chkStartTimer" />

    <CheckBox
        android:id="@+id/chkSynchro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chkSynchro" />

</LinearLayout>